--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ div.riview ul li{
 div.riview ul li:hover {border:4px solid;}
 div.riview ul li div.rititle{height:0%;overflow:hidden;z-index:3;position:absolute;bottom:0;left:0;width:100%;}
 div.riview ul li div.rititle p{width:100%;}
+div.riview ul li img.ri-thumb{display:block;width:100%;height:auto;object-fit:cover;}
 div.riview ul li div.riback{
 					height:0%;overflow:hidden;z-index:2;position:absolute;bottom:0;left:0;width:inherit;
 			/*		filter:alpha(opacity=60);
